--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,7 @@ body {
   width: 100%;
   height: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   background-color: var(--background);
 }
