--- a/src/App.css
+++ b/src/App.css
@@ -19,9 +19,6 @@ html,
 body {
   width: 100%;
   height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
   background-color: var(--background);
 }
 
@@ -62,6 +59,9 @@ select {
   .container {
     padding: 0 24px;
     width: 375px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 }
 
@@ -69,6 +69,9 @@ select {
   .container {
     padding: 0 32px;
     width: 768px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 }
 
@@ -76,5 +79,8 @@ select {
   .container {
     padding: 0 120px;
     width: 1440px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 }
