--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -5,6 +5,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  margin: 0 auto;
 }
 
 @media screen and (min-width: 376px) and (max-width: 768px) {
