--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -10,7 +10,15 @@
 }
 
 @media screen and (min-width: 376px) and (max-width: 768px) {
+  .header {
+    width: 768px;
+    height: 54px;
+  }
 }
 
 @media screen and (min-width: 769px) and (max-width: 1440px) {
+  .header {
+    width: 1440px;
+    height: 60px;
+  }
 }
