--- a/src/App.css
+++ b/src/App.css
@@ -55,7 +55,7 @@ select {
   color: inherit;
 }
 
-@media screen and (max-width: 376px) {
+@media screen and (max-width: 376px) and (max-width: 767px) {
   .container {
     padding: 0 24px;
     width: 375px;
@@ -65,7 +65,7 @@ select {
   }
 }
 
-@media screen and (min-width: 376px) and (max-width: 768px) {
+@media screen and (min-width: 767px) and (max-width: 1439px) {
   .container {
     padding: 0 32px;
     width: 768px;
@@ -75,7 +75,7 @@ select {
   }
 }
 
-@media screen and (min-width: 769px) and (max-width: 1440px) {
+@media screen and (max-width: 1440px) {
   .container {
     padding: 0 120px;
     width: 1440px;
