--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,10 @@ body {
   line-height: 1;
   font-size: 100%;
   font-family: sans-serif;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 ol,
@@ -55,7 +59,7 @@ select {
   color: inherit;
 }
 
-@media screen and (max-width: 376px) and (max-width: 767px) {
+@media screen and (max-width: 376px) {
   .container {
     padding: 0 24px;
     width: 375px;
@@ -65,7 +69,15 @@ select {
   }
 }
 
-@media screen and (min-width: 767px) and (max-width: 1439px) {
+.container {
+  padding: 0 24px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+@media screen and (min-width: 768px) {
   .container {
     padding: 0 32px;
     width: 768px;
@@ -75,7 +87,7 @@ select {
   }
 }
 
-@media screen and (max-width: 1440px) {
+@media screen and (min-width: 1440px) {
   .container {
     padding: 0 120px;
     width: 1440px;
