--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -9,16 +9,16 @@
   margin: 0 auto;
 }
 
-@media screen and (min-width: 376px) and (max-width: 768px) {
+@media screen and (min-width: 768px) {
   .header {
     width: 768px;
     height: 54px;
   }
 }
 
-@media screen and (min-width: 769px) and (max-width: 1440px) {
+@media screen and (min-width: 1440px) {
   .header {
-    width: 768px;
+    width: 1440px;
     height: 54px;
   }
 }
