--- a/src/components/LearnBtn/LearnBtn.module.css
+++ b/src/components/LearnBtn/LearnBtn.module.css
@@ -2,7 +2,7 @@
   background: var(--blue);
   border-radius: 12px;
   padding: 16px 24px;
-  width: 287px;
+  width: 100%;
   height: 48px;
   font-family: var(--font-family);
   font-weight: 700;
@@ -12,4 +12,11 @@
   color: var(--white);
 
   display: block;
+}
+
+.btn:hover {
+  border: 1px solid var(--blue);
+  background-color: transparent;
+
+  color: var(--black-2);
 }
