--- a/src/App.css
+++ b/src/App.css
@@ -66,7 +66,7 @@ select {
   flex-direction: column;
   align-items: center;
   background-color: var(--background);
-  padding-bottom: 100px;
+  margin-bottom: 100px;
 }
 
 @media screen and (min-width: 768px) {
