--- a/src/components/ChooseASubscription/ChooseASubscription.module.css
+++ b/src/components/ChooseASubscription/ChooseASubscription.module.css
@@ -48,3 +48,26 @@
   color: var(--black-1);
   margin-bottom: 32px;
 }
+
+.btn {
+  background: var(--blue);
+  border-radius: 12px;
+  padding: 16px 24px;
+  width: 100%;
+  height: 48px;
+  font-family: var(--font-family);
+  font-weight: 700;
+  font-size: 15px;
+  line-height: 130%;
+  text-align: center;
+  color: var(--white);
+
+  display: block;
+}
+
+.btn:hover {
+  border: 1px solid var(--blue);
+  background-color: transparent;
+
+  color: var(--black-2);
+}
