--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -13,6 +13,8 @@
 
   position: absolute;
   top: 0;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .cardsBox {
@@ -131,13 +133,11 @@
 @media screen and (min-width: 768px) {
   .modal {
     width: 768px;
-  }
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
-  .listNav {
-    width: 500px;
-  }
-
-  .btns {
-    width: 500px;
+    position: absolute;
+    top: 0;
   }
 }
