--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -9,12 +9,12 @@
   margin: 0 auto;
 }
 
-@media screen and (min-width: 768px) {
+/* @media screen and (min-width: 768px) {
   .header {
     width: 768px;
     height: 54px;
   }
-}
+} */
 
 /* @media screen and (min-width: 1440px) {
   .header {
