--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -130,7 +130,7 @@
   border: none;
 }
 
-@media screen and (min-width: 768px) {
+/* @media screen and (min-width: 768px) {
   .modal {
     width: 768px;
     display: flex;
@@ -140,4 +140,4 @@
     position: absolute;
     top: 0;
   }
-}
+} */
