--- a/src/components/PayModal/PayModal.module.css
+++ b/src/components/PayModal/PayModal.module.css
@@ -1,7 +1,6 @@
 .container {
   width: 340px;
   position: absolute;
-  position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -14,9 +13,8 @@
 
 .back {
   background-color: rgba(0, 0, 0, 0.123);
-  width: 100vh;
-  height: 100%;
-  position: absolute;
+  width: 100%;
+  height: 3000px;
   position: absolute;
   top: 50%;
   left: 50%;
