--- a/src/components/StartModal/StartModal.module.css
+++ b/src/components/StartModal/StartModal.module.css
@@ -15,7 +15,8 @@
 .back {
   background-color: rgba(0, 0, 0, 0.123);
   width: 100vh;
-  height: 100%;
+  height: 6258px;
+
   position: absolute;
   position: absolute;
   top: 50%;
