--- a/src/components/PayModal/PayModal.module.css
+++ b/src/components/PayModal/PayModal.module.css
@@ -1,24 +1,36 @@
 .container {
   width: 340px;
   position: absolute;
-  top: 55%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 
   background-color: var(--white);
 
+  margin-bottom: 100px;
+
   padding: 48px 24px 40px;
   border-radius: 12px;
+  max-height: 90vh; /* Ограничиваем максимальную высоту */
+  overflow-y: auto; /* Включаем вертикальную прокрутку, если нужно */
 }
 
 .back {
   background-color: rgba(0, 0, 0, 0.123);
   width: 100%;
-  height: 6258px;
-  position: absolute;
+  height: 100%;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+
+  padding-bottom: 100px;
+
+  justify-content: center; /* Центрируем содержимое */
+  align-items: center; /* Центрируем содержимое по вертикали */
+  overflow: hidden; /* Скрываем прокрутку для бекдропа */
+
+  z-index: 9999;
 }
 
 .title {
