--- a/src/components/StartModal/StartModal.module.css
+++ b/src/components/StartModal/StartModal.module.css
@@ -1,7 +1,6 @@
 .container {
   width: 340px;
   position: absolute;
-  position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -14,14 +13,17 @@
 
 .back {
   background-color: rgba(0, 0, 0, 0.123);
-  width: 100vh;
-  height: 6258px;
-
-  position: absolute;
-  position: absolute;
+  width: 100%;
+  height: 100%;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  justify-content: center; /* Центрируем содержимое */
+  align-items: center; /* Центрируем содержимое по вертикали */
+  overflow: hidden; /* Скрываем прокрутку для бекдропа */
+
+  z-index: 9999;
 }
 
 .title {
