--- a/src/pages/Netflix.module.css
+++ b/src/pages/Netflix.module.css
@@ -27,6 +27,13 @@
 }
 
 .cardF {
+  background-color: transparent;
+
+  padding: 14px 43px;
+  border-radius: 12px 0 0 12px;
+  border: 1px solid var(--blue);
+}
+.activeF {
   background-color: var(--blue);
   padding: 14px 43px;
   border-radius: 12px 0 0 12px;
@@ -39,6 +46,12 @@
   border-radius: 0 12px 12px 0;
 }
 
+.activeS {
+  background-color: var(--blue);
+  padding: 14px 43px;
+  border-radius: 0 12px 12px 0;
+}
+
 .cardText {
   font-family: var(--font-family);
   font-weight: 400;
@@ -46,15 +59,16 @@
   line-height: 150%;
   letter-spacing: 0.01em;
   text-align: center;
-  color: var(--white);
+  color: #030303;
 }
 
-.cardTextS {
+.cardTextActive {
   font-family: var(--font-family);
   font-weight: 400;
   font-size: 17px;
   line-height: 150%;
   letter-spacing: 0.01em;
   text-align: center;
-  color: #030303;
+
+  color: var(--white);
 }
