--- a/src/components/InviteCard/InviteCard.module.css
+++ b/src/components/InviteCard/InviteCard.module.css
@@ -32,6 +32,11 @@
   height: 114px;
   background: #f1f4f8;
   padding: 28px 33px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .cardLinkBoxTitle {
