--- a/src/components/PayModal/PayModal.module.css
+++ b/src/components/PayModal/PayModal.module.css
@@ -132,3 +132,24 @@
   letter-spacing: 0.01em;
   color: var(--black-2);
 }
+
+.payBtns {
+  display: flex;
+  gap: 13px;
+  margin-bottom: 28px;
+}
+
+.payBtn {
+  background-color: #000;
+  border: 0px solid #000;
+  border-radius: 3px;
+  width: 156px;
+  height: 35px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  padding: 5px 10px;
+  cursor: pointer;
+}
