--- a/src/components/Faq/Faq.module.css
+++ b/src/components/Faq/Faq.module.css
@@ -75,6 +75,10 @@
   line-height: 130%;
   text-align: center;
   color: var(--white);
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .cardBox {
