--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -9,6 +9,11 @@
   margin: 0 auto;
 }
 
+.logo {
+  width: 32px;
+  height: 32px;
+}
+
 /* @media screen and (min-width: 768px) {
   .header {
     width: 768px;
