--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -5,6 +5,7 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
+  box-shadow: 0 4px 4px 0 rgba(227, 227, 227, 0.2);
 }
 .modal {
   display: flex;
