--- a/src/pages/YouTube.module.css
+++ b/src/pages/YouTube.module.css
@@ -30,3 +30,55 @@
   text-align: center;
   color: var(--blue);
 }
+
+.card {
+  display: flex;
+  margin-bottom: 32px;
+}
+
+.cardF {
+  background-color: transparent;
+
+  padding: 14px 43px;
+  border-radius: 12px 0 0 12px;
+  border: 1px solid var(--blue);
+}
+.activeF {
+  background-color: var(--blue);
+  padding: 14px 43px;
+  border-radius: 12px 0 0 12px;
+}
+
+.cardS {
+  background-color: transparent;
+  padding: 14px 43px;
+  border: 1px solid var(--blue);
+  border-radius: 0 12px 12px 0;
+}
+
+.activeS {
+  background-color: var(--blue);
+  padding: 14px 43px;
+  border-radius: 0 12px 12px 0;
+}
+
+.cardText {
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 150%;
+  letter-spacing: 0.01em;
+  text-align: center;
+  color: #030303;
+}
+
+.cardTextActive {
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 150%;
+  letter-spacing: 0.01em;
+  text-align: center;
+
+  color: var(--white);
+}
